--- a/Mission_to_Mars/templates/index.html
+++ b/Mission_to_Mars/templates/index.html
@@ -5,27 +5,52 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Surfing</title>
+  <title>Mission to Mars</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 </head>
 
 <body>
-  <div clas="container">
-    <div class="jumbotron text-center">
-      <h1>Endless Summer</h1>
-      <p><a class="btn btn-primary btn-lg" href="/scrape" role="button">Surfing Reports</a></p>
+  <div class="container-fluid">
+    <div class="jumbotron text-center" style="background-image: url({{Mars_data.Featured_image}});background-size: 100%;">
+      <h1 style="color: whitesmoke;">Mission to Mars</h1>
+      <p><a class="btn btn-primary btn-lg" href="/scrape" role="button">Click here to get an update!</a></p>
     </div>
-      
-    <!-- surf data -->
+
+    <div class="container" style="background-color:rgba(0, 0, 0, 0.493); color: whitesmoke;">
+      <h2 style="color: black;"><u>Latest Mars News</u></h2>
+      <h4 style="color: black;">{{Mars_data.Title}}</h4>
+      <p>{{Mars_data.Teaser}}</p>
+    </div>
+    <hr>
+
     <div class="row">
-      <div class="col-md-8 col-md-offset-2">
-        <img src= {{ surfing.src }} width: 50% />
-        <h3>Santa Barbara Surf Report</h3>
-        <p>{{ surfing.report }}</p>
+      <div class="col-sm-6 col-md-8">
+        <h2><strong>Mars Featured Image</strong></h2>
+        <img src={{ Mars_data.Featured_image }} alt="Featured Image" width="100%" height="100%">
+      </div>
+      <div class="col-sm-6 col-md-4">
+        <h4><strong>Mars Facts</strong></h4>
+        <p style="border-color: black;">{{Mars_data.Facts|safe}}</p>
       </div>
     </div>
-  </div>
 
+    <div class="row">
+
+      <h2><strong>Mars Hemispheres</strong></h2>
+      
+      {% for hemisphere in Mars_data.Hemispheres%}
+      <div class="col-md-6" style="border-color: black;">
+        <div class="thumbnail">
+          <img src='{{ hemisphere.img_url}}' alt={{hemisphere.img_url}}>
+        </div>
+        <hr>
+        <div>
+          <h3><strong>{{hemisphere.Title}}</strong></h3>
+        </div>
+      </div>
+      {% endfor %}
+    </div>
+  </div>
 </body>
 </html>
 
